@@ -128,8 +128,8 @@ test {
         "--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
         "--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
         "--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
-        "--illegal-access=permit",
-        "-Djdk.tls.client.protocols=TLSv1.2");
+        "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+        "--illegal-access=permit");
 }
 
 tasks.withType(Test) {
